# bleader-ai-chatbot

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  app.py  config.py  corpus.py  db.py  embeddings.py  ingest.py  lexical.py  llm.py  rag.py  rerank.py  schemas.py  store.py  translate.py
docker/: Dockerfile.backend  Dockerfile.frontend  entrypoint.sh  nginx.conf
docs/: EXAMPLE.md
eval/: dataset.py  faithfulness_eval.py  retrieval_eval.py
eval/results/: retrieval_metrics.json
frontend/: index.html  node_modules  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  main.jsx  useTheme.js
frontend/src/components/: AnswerCard.jsx  AuthPage.jsx  ChatThread.jsx  LanguagePicker.jsx  Logo.jsx  MessageInput.jsx  PreferencesBar.jsx  Sidebar.jsx  UserMenu.jsx
frontend/src/i18n/: index.jsx  translations.js
frontend/src/styles/: index.css  tokens.css
tests/: test_retrieval.py  test_units.py
